fix: overflow hidden in normal layout

--- a/src/layouts/Normal/NormalLayout.module.scss
+++ b/src/layouts/Normal/NormalLayout.module.scss
@@ -1,6 +1,7 @@
 @import '../../styles/scss/mixins';
 
 .container {
+  overflow: hidden;
   margin: 1rem auto 0;
   padding: 0 2rem;
   @include laptop() {
