--- a/src/styles/pages/Home.module.scss
+++ b/src/styles/pages/Home.module.scss
@@ -2,8 +2,7 @@
 
 .main {
   width: 100%;
-  height: calc(100vh - 60px);
-  /* height: 100vh; */
+  height: 100vh;
   @include centerFlexColumn;
 
   .about {
